--- a/style.css
+++ b/style.css
@@ -51,3 +51,17 @@
     font-size: 18px;
 
 }
+
+@media screen and (max-width: 768px) {
+    .todo-section-header {
+        flex-direction: column;
+    }
+
+    .todo-section-header > * {
+        margin-bottom: 5px;
+    }
+
+    .todo-list-section-header {
+        flex-direction: column;
+    }
+}
